minor format and doc changes